# bipa

./: Cargo.toml  README.md
migrations/: V1__001_initial.sql
resources/: sample.json
src/: main.rs
src/application/: adapters.rs  mod.rs  repository.rs  types.rs
src/application/services/: node.rs
src/infrastructure/: jobs.rs  mod.rs  repository.rs  server.rs
src/infrastructure/api/: input_dto.rs  mod.rs  output_dto.rs  routes.rs
